# triton-cpu

./: .gitignore  CHANGES.md  CMakeLists.txt  README.en.md  README.md
.github/workflows/: build-test.yml  documentation.yml  integration-tests.yml  integration-tests.yml.in  llvm-build.yml  test-backends.yml  torch-inductor-tests.yml  wheels.yml
FlagGems/: README.md  README_cn.md  pyproject.toml
FlagGems/benchmark/: conftest.py  core_shapes.yaml  performance_utils.py  run_priority_suite.py  summary_for_plot.py  test_batch_norm_backward.py  test_dropout.py  test_fused_perf.py  test_grouped_mm.py  test_mhc_perf.py  test_unary_pointwise_perf.py
FlagGems/ctests/: test_triton_norm.cpp  test_triton_sort.cpp
FlagGems/docs/: getting-started.md  installation.md  performance_and_benchmark.md  usage.md  usage_cn.md
FlagGems/flag_tree_requirements/: requirements_ascend.txt  requirements_enflame.txt  requirements_hcu.txt  requirements_iluvatar.txt  requirements_mthreads.txt  requirements_nvidia.txt  requirements_xpu.txt
FlagGems/lib/: device_info.cpp  fused_add_rms_norm.cpp  mm.cpp  rms_norm.cpp  sort.cpp
FlagGems/tests/: accuracy_utils.py  conftest.py  ks_tests.py  test_attention_ops.py  test_binary_pointwise_ops.py  test_enable_api.py  test_general_reduction_ops.py  test_libentry.py  test_norm_ops.py  test_pointwise_dynamic.py  test_quant.py  test_special_ops.py  test_tensor_wrapper.py  test_unary_pointwise_ops.py
FlagGems/tools/: extract_aten_ops.py
lib/Analysis/: Utility.cpp
python/: setup.py
python/src/: ir.cc  llvm.cc
python/triton/: _internal_testing.py  testing.py
python/tutorials/: 01-vector-add.py  02-fused-softmax.py  03-matrix-multiplication.py  04-low-memory-dropout.py  06-fused-attention.py  07-extern-functions.py
triton-shared/: CMakeLists.txt  triton_shared.cc
triton-shared/backend/: compiler.py  driver.py
triton-shared/include/triton-shared/Analysis/: MaskAnalysis.h  OpFoldResultUtils.h  UseAnalysis.h
triton-shared/include/triton-shared/AnalysisStructured/: PtrAnalysis.h
triton-shared/include/triton-shared/Conversion/: CMakeLists.txt
triton-shared/include/triton-shared/Conversion/TritonArithToLinalg/: ConversionPatterns.hpp  TritonArithToLinalg.h
triton-shared/include/triton-shared/Conversion/TritonToLinalgExperimental/: CollapseShape.h  Passes.td
triton-shared/include/triton-shared/Conversion/TritonToStructured/: TritonToStructured.h
triton-shared/include/triton-shared/Dialect/TPtr/IR/: CMakeLists.txt  TPtrDialect.h  TPtrDialect.td
triton-shared/include/triton-shared/Dialect/TritonStructured/IR/: TritonStructuredDialect.td
triton-shared/language/cpu/: libdevice.py
triton-shared/lib/Analysis/: MaskAnalysis.cpp  OpFoldResultUtils.cpp  PtrAnalysis.cpp  UseAnalysis.cpp
triton-shared/lib/AnalysisStructured/: PtrAnalysis.cpp
triton-shared/lib/Conversion/StructuredToMemref/: StructuredToMemref.cpp
triton-shared/lib/Conversion/TPtrToLLVM/: TPtrToLLVM.cpp  TPtrToLLVMPass.cpp
triton-shared/lib/Conversion/TritonArithToLinalg/: TritonArithToLinalg.cpp  TritonArithToLinalgPass.cpp
triton-shared/lib/Conversion/TritonToLinalgExperimental/: CMakeLists.txt  CollapseShape.cpp  ReconcilePtrCastsPass.cpp  TritonToLinalgExperimentalPass.cpp  TritonToPtrPass.cpp
triton-shared/lib/Conversion/TritonToStructured/: TritonToStructuredPass.cpp
triton-shared/lib/Conversion/TritonToUnstructured/: TritonToUnstructuredPass.cpp
triton-shared/lib/Conversion/UnstructuredToMemref/: UnstructuredToMemrefPass.cpp
triton-shared/lib/Dialect/TPtr/IR/: CMakeLists.txt  TPtrDialect.cpp  TPtrOps.cpp
triton-shared/test/: test_detect_vscale.py
triton-shared/test/Conversion/StructuredToMemref/: masked_ldst_scalar_and_2d.mlir  wraparound_1d.mlir  wraparound_stacked.mlir
triton-shared/test/Conversion/TritonArithToLinalg/: join.mlir
triton-shared/test/Conversion/TritonToLinalg/: wraparound_stacked.mlir
triton-shared/test/Conversion/TritonToLinalgExperimental/: atomic_cas.mlir
triton-shared/tools/: RegisterTritonSharedDialects.h
triton-shared/tools/triton-shared-opt/: CMakeLists.txt
(+80 files in other folders)
